fix: fix overflowed comment in case it has fewer lines

--- a/src/slices/sidebar/discussion/comments-list/Node.css
+++ b/src/slices/sidebar/discussion/comments-list/Node.css
@@ -5,6 +5,9 @@
     & .commentContainer {
         position: relative;
 
+        /* Do not show overflowed comment in case we edited it to have fewer lines */
+        overflow: hidden;
+
         & .commentPlacer {
             &.default {
                 position: relative;
